--- a/about.css
+++ b/about.css
@@ -22,7 +22,7 @@ body {
   align-items: center;
   width: 100%;
   height: 60%;
-  background: url("Images/bridge.avif");
+  background: url("Images/bridge.png");
   background-size: 100%;
   background-position: center;
   transition: 0.5s;
