--- a/about.css
+++ b/about.css
@@ -124,7 +124,11 @@ h2 {
   left: 100%;
 }
 
-.responsive {
+#face {
   max-width: 100%;
   height: auto;
+  margin-right: 5%;
+  margin-left: 10%;
+  border: 5px solid #555;
+  float: left;
 }
