--- a/index.css
+++ b/index.css
@@ -18,12 +18,13 @@ canvas{
     position: absolute;
     color: white;
     align-items: center;
+    justify-content: center;
   }
 
   #enter {
-    margin-left: 50%;
-    margin-top: 20%;
-    align-items: center;
+    position: relative;
+    left: 45%;
+    top: 250px;
   }
 
   /* === removing default button style ===*/
